[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scenes/Maps/EmptyMap/EmptyMap.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Main/LevelEditor/SaveIndicator/SaveIndicator.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Main/LevelEditor/SaveIndicator/SaveIndicator.gd" type="Script" id=3]
[ext_resource path="res://Scenes/Main/LevelEditor/LevelEditor.gd" type="Script" id=5]
[ext_resource path="res://Scenes/Main/LevelEditor/ItemSelection/ItemSelection.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/Main/LevelEditor/MapHolder.gd" type="Script" id=7]
[ext_resource path="res://Scenes/Main/LevelEditor/Grid/Grid.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scenes/Main/LevelEditor/CursorObjectPreview.gd" type="Script" id=9]
[ext_resource path="res://Scenes/Main/LevelEditor/SaveMapDialog/SaveMapDialog.tscn" type="PackedScene" id=10]

[node name="LevelEditor" type="Control"]
pause_mode = 2
anchor_bottom = 1.0
margin_bottom = -720.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MapHolder" type="Node" parent="."]
pause_mode = 1
script = ExtResource( 7 )

[node name="Map" parent="MapHolder" instance=ExtResource( 1 )]

[node name="CursorObjectPreview" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.498039 )
script = ExtResource( 9 )

[node name="Grid" parent="." instance=ExtResource( 8 )]
editor_camera_path = NodePath("../EditorCamera")

[node name="EditorCamera" type="Camera2D" parent="."]
current = true

[node name="PlayerContainer" type="Node" parent="."]

[node name="GUI" type="CanvasLayer" parent="."]

[node name="Popups" type="Node" parent="GUI"]

[node name="UnsaveQuitConfirm" type="ConfirmationDialog" parent="GUI/Popups"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -212.5
margin_top = -35.0
margin_right = 212.5
margin_bottom = 35.0
popup_exclusive = true
window_title = "Veuillez confirmer…"
dialog_text = "Are you sure you want to quit the editor with unsaved changes ?"

[node name="UnsaveReturnToGamePopup" type="ConfirmationDialog" parent="GUI/Popups"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -212.5
margin_top = -35.0
margin_right = 212.5
margin_bottom = 35.0
popup_exclusive = true
window_title = "Veuillez confirmer…"
dialog_text = "Are you sure you want to quit the editor with unsaved changes ?"

[node name="NoSpawnPopup" type="AcceptDialog" parent="GUI/Popups"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -84.0
margin_top = -29.0
margin_right = 84.0
margin_bottom = 29.0
popup_exclusive = true
window_title = "Error"
dialog_text = "No player spawns !"

[node name="SaveMapDialog" parent="GUI/Popups" instance=ExtResource( 10 )]
margin_left = 40.0
margin_top = 60.0
margin_right = 296.0
margin_bottom = 188.0

[node name="ExistingFileDialog" type="ConfirmationDialog" parent="GUI/Popups"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -37.5
margin_right = 100.0
margin_bottom = 37.5
window_title = "Veuillez confirmer…"
dialog_text = "Existing file name !
Replace existing file ?"

[node name="FailedSavePopup" type="AcceptDialog" parent="GUI/Popups"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -72.0
margin_top = -29.0
margin_right = 72.0
margin_bottom = 29.0
window_title = "Alerte !"
dialog_text = "Failed to save map !"

[node name="OpenMapDialog" type="FileDialog" parent="GUI/Popups"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -270.0
margin_top = -235.5
margin_right = 270.0
margin_bottom = 235.5
window_title = "Open a File"
dialog_hide_on_ok = true
mode_overrides_title = false
mode = 0
access = 1
filters = PoolStringArray( "*.scn;Godot scene file" )
current_dir = "user://Dinomaps"
current_path = "user://Dinomaps/"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UnsaveLoadConfirm" type="ConfirmationDialog" parent="GUI/Popups"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -116.0
margin_top = -35.0
margin_right = 116.0
margin_bottom = 35.0
window_title = "Veuillez confirmer…"
dialog_text = "Load map with unsaved changes ?"

[node name="UnsaveNewConfirm" type="ConfirmationDialog" parent="GUI/Popups"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -146.0
margin_top = -35.0
margin_right = 146.0
margin_bottom = 35.0
window_title = "Veuillez confirmer…"
dialog_text = "Create a new map without saving changes ?"

[node name="ItemSelection" parent="GUI" instance=ExtResource( 6 )]

[node name="MenuBar" type="ColorRect" parent="GUI"]
anchor_right = 1.0
margin_bottom = 20.0
color = Color( 0.219608, 0.219608, 0.219608, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="GUI/MenuBar"]
anchor_bottom = 1.0
margin_right = 12.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuButtonFile" type="MenuButton" parent="GUI/MenuBar/HBoxContainer"]
margin_right = 35.0
margin_bottom = 20.0
text = "File"
items = [ "New map", null, 0, false, false, 0, 0, null, "", false, "Open map", null, 0, false, false, 1, 0, null, "", false, "Save map", null, 0, false, false, 2, 0, null, "", false, "Save map as...", null, 0, false, false, 3, 0, null, "", false, "Return to game", null, 0, false, false, 4, 0, null, "", false, "Quit", null, 0, false, false, 5, 0, null, "", false ]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonActionContainer" type="GridContainer" parent="GUI"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -195.307
margin_top = -94.9424
margin_right = -60.3069
margin_bottom = -50.9424
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonToggleItemsMenu" type="Button" parent="GUI/ButtonActionContainer"]
margin_right = 135.0
margin_bottom = 20.0
text = "Toggle items menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonGoToZero" type="Button" parent="GUI/ButtonActionContainer"]
margin_top = 24.0
margin_right = 135.0
margin_bottom = 44.0
text = "Go To (0, 0)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonTestMap" type="Button" parent="GUI/ButtonActionContainer"]
margin_top = 48.0
margin_right = 135.0
margin_bottom = 68.0
text = "Test map"

[node name="OptionsContainer" type="ColorRect" parent="GUI"]
margin_left = 1071.0
margin_top = 83.0
margin_right = 1211.0
margin_bottom = 248.0
color = Color( 0.219608, 0.219608, 0.219608, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionsContainer" type="VBoxContainer" parent="GUI/OptionsContainer"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ShowGridCbx" type="CheckBox" parent="GUI/OptionsContainer/OptionsContainer"]
margin_right = 140.0
margin_bottom = 24.0
pressed = true
text = "Show grid"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SaveIndicator" parent="GUI" instance=ExtResource( 2 )]
script = ExtResource( 3 )

[connection signal="pressed" from="GUI/ButtonActionContainer/ButtonToggleItemsMenu" to="." method="_on_ButtonToggleItemsMenu_pressed"]
[connection signal="pressed" from="GUI/ButtonActionContainer/ButtonGoToZero" to="." method="_on_ButtonGoToZero_pressed"]
[connection signal="pressed" from="GUI/ButtonActionContainer/ButtonTestMap" to="." method="_on_ButtonTestMap_pressed"]
[connection signal="toggled" from="GUI/OptionsContainer/OptionsContainer/ShowGridCbx" to="." method="_on_ShowGridCbx_toggled"]
